--- a/encryption-netcore-security.csproj
+++ b/encryption-netcore-security.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>encryption_netcore_security</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
